fix: links contrast

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -2,7 +2,6 @@
   height: 10vh;
   background-color: var(--neutral-800);
   border-top: 1px solid var(--neutral-700);
-  color: var(--neutral-400);
   font-size: var(--font-xs);
 }
 
@@ -16,14 +15,14 @@
   height: 100%;
 }
 
-.footer-links a {
+.footer a {
   margin-left: 1.5rem;
   color: var(--blue-500);
   text-decoration: none;
   transition: color 0.2s;
 }
 
-.footer-links a:hover {
+.footer a:hover {
   color: var(--orange-500);
 }
 
